prometheus/06-blackbox/03-blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-svc
  namespace: kube-prom
spec:
  selector:
    app: blackbox
  ports:
  - name: http
    port: 9115
    targetPort: 9115
